[package]
name = "tweety"
version = "0.1.3"
edition = "2021"
description="A wrapper for twitter v2.0 api written for rust."
license = "MIT"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
homepage = "https://github.com/Nicest-One/tweety"
repository = "https://github.com/Nicest-One/tweety"
keywords = [
    "tweety",
    "twitter",
    "rust"   
]
catagories = ["twitter-api"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3